--- a/app/src/main/res/layout/dialog_afterscanningbuttonclick.xml
+++ b/app/src/main/res/layout/dialog_afterscanningbuttonclick.xml
@@ -13,9 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginBottom="10dp"
-
-        />
+        android:layout_marginBottom="10dp" />
 
     <TableRow
         android:layout_width="match_parent"
