--- a/app/src/main/res/layout/fragment_new_event.xml
+++ b/app/src/main/res/layout/fragment_new_event.xml
@@ -5,16 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?android:windowBackground"
-    android:orientation="vertical"
     android:focusable="true"
-    android:focusableInTouchMode="true">
-
+    android:focusableInTouchMode="true"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/newEventTab"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="10dp"
@@ -43,19 +41,17 @@
 
 
             <EditText
-
                 android:id="@+id/newEvent_editText_description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_below="@+id/newEvent_textEdit_shortTitle"
                 android:ems="8"
-                android:textSize="16sp"
                 android:imeOptions="actionNext"
-                android:inputType="text|textMultiLine" />
+                android:inputType="text|textMultiLine"
+                android:textSize="16sp" />
 
             <TextView
-
                 android:id="@+id/newEvent_textView_Description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -67,13 +63,9 @@
 
 
             <TextView
-
                 android:id="@+id/newEvent_textView_Date"
-
                 android:layout_width="wrap_content"
-
                 android:layout_height="wrap_content"
-
                 android:layout_alignBaseline="@+id/newEvent_editText_Date"
                 android:layout_alignParentStart="true"
                 android:layout_marginLeft="10dp"
@@ -92,11 +84,8 @@
 
 
             <TextView
-
                 android:id="@+id/newEvent_textView_startTime"
-
                 android:layout_width="wrap_content"
-
                 android:layout_height="wrap_content"
                 android:layout_alignBaseline="@+id/newEvent_editText_startTime"
                 android:layout_alignParentStart="true"
@@ -117,13 +106,9 @@
 
 
             <TextView
-
                 android:id="@+id/newEvent_textView_endTime"
-
                 android:layout_width="wrap_content"
-
                 android:layout_height="wrap_content"
-
                 android:layout_alignBaseline="@+id/newEvent_textEdit_endTime"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
@@ -134,11 +119,8 @@
 
 
             <EditText
-
                 android:id="@+id/newEvent_textEdit_endTime"
-
                 android:layout_width="wrap_content"
-
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_below="@+id/newEvent_editText_startTime"
@@ -148,7 +130,6 @@
 
 
             <CheckBox
-
                 android:id="@+id/newEvent_checkBox_SerialEvent"
                 android:layout_width="wrap_content"
                 android:layout_height="73dp"
@@ -160,7 +141,6 @@
 
 
             <Spinner
-
                 android:id="@+id/newEvent_spinner_repetition"
                 android:layout_width="180dp"
                 android:layout_height="wrap_content"
@@ -196,13 +176,9 @@
 
 
             <TextView
-
                 android:id="@+id/newEvent_textView_room"
-
                 android:layout_width="wrap_content"
-
                 android:layout_height="wrap_content"
-
                 android:layout_alignBaseline="@+id/newEvent_textEdit_room"
                 android:layout_alignParentStart="true"
                 android:layout_marginLeft="10dp"
@@ -217,16 +193,14 @@
                 android:layout_alignParentEnd="true"
                 android:layout_below="@+id/newEvent_editText_description"
                 android:ems="8"
-                android:inputType="text"
-                android:textSize="16sp"
                 android:imeOptions="actionDone"
-                />
+                android:inputType="text"
+                android:textSize="16sp" />
 
             <EditText
                 android:id="@+id/newEvent_textEdit_shortTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-
                 android:layout_alignBaseline="@id/newEvent_textEdit_shortTitle"
                 android:layout_alignParentEnd="true"
                 android:ems="8"
@@ -263,20 +237,14 @@
                 android:inputType="text"
                 android:textSize="16sp" />
 
-
         </RelativeLayout>
     </ScrollView>
 
     <Button
-
         android:id="@+id/newEvent_button_save"
-
         android:layout_width="match_parent"
-
         android:layout_height="60dp"
-
         android:layout_alignParentBottom="true"
-
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
