--- a/app/src/main/res/layout/list_row.xml
+++ b/app/src/main/res/layout/list_row.xml
@@ -3,19 +3,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
     android:layout_centerVertical="true"
-    android:textAlignment="center"
-    android:padding="5dip">
-
+    android:orientation="horizontal"
+    android:padding="5dip"
+    android:textAlignment="center">
 
     <!-- Name of participant-->
     <TextView
         android:id="@+id/participantName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
         android:layout_centerVertical="true"
+        android:textAlignment="center"
         android:textAllCaps="true"
         android:textSize="15dip"
         android:textStyle="bold"
