--- a/app/src/main/res/layout/fragment_accepted_event_details.xml
+++ b/app/src/main/res/layout/fragment_accepted_event_details.xml
@@ -33,7 +33,7 @@
 
         <TextView
             android:id="@+id/acceptedEventDetailsOrganisatorText"
-            android:layout_width="180dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="20dp"
