--- a/app/src/main/res/layout/dialog_savingsucessfull.xml
+++ b/app/src/main/res/layout/dialog_savingsucessfull.xml
@@ -3,13 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/relativeLayout2"
     android:layout_width="wrap_content"
-    android:layout_height="150dp"
+    android:layout_height="180dp"
     android:orientation="vertical"
     tools:context=".TabActivity">
 
     <TableRow
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="69dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true">
 
@@ -28,47 +28,48 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="180dp"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="80dp">
+        android:layout_alignParentTop="true">
 
-
-        <TableRow
-            android:layout_width="match_parent"
+        <Button
+            android:id="@+id/savingSuccessful_button_new"
+            android:layout_width="293dp"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:visibility="visible">
+            android:layout_marginBottom="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_weight="0.5"
+            android:background="@color/zentea_darkgreen"
 
+            android:drawableEnd="@android:drawable/ic_menu_today"
+            android:text="@string/savingSuccessful_new"
+            android:textColor="@color/zxing_status_text"
+            android:visibility="visible" />
 
-            <Button
-                android:id="@+id/savingSuccessful_button_new"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_marginBottom="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_weight="0.5"
-                android:background="@color/zentea_darkgreen"
-                android:text="@string/savingSuccessful_new"
-                android:textColor="@color/zxing_status_text"
-                android:visibility="visible" />
+        <Button
+            android:id="@+id/savingSuccessful_button_qrcode"
+            android:layout_width="293dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="60dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginStart="5dp"
+            android:layout_weight="0.5"
+            android:background="@color/zentea_darkgreen"
+            android:drawableEnd="@drawable/ic_qr1"
+            android:text="@string/savingSuccessful_qrcode"
+            android:textColor="@color/zxing_status_text"
+            android:visibility="visible" />
 
-            <Button
-                android:id="@+id/savingSuccessful_button_qrcode"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_marginBottom="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_weight="0.5"
-                android:background="@color/zentea_darkgreen"
-                android:padding="2dp"
-                android:text="@string/savingSuccessful_qrcode"
-                android:textColor="@color/zxing_status_text"
-                android:visibility="visible" />
-        </TableRow>
 
     </RelativeLayout>
 </RelativeLayout>
