--- a/app/src/main/res/layout/fragment_my_own_event_details.xml
+++ b/app/src/main/res/layout/fragment_my_own_event_details.xml
@@ -22,14 +22,14 @@
             android:id="@+id/scrollView2"
             android:layout_width="0dp"
             android:layout_height="213dp"
-            android:layout_marginEnd="10dp"
             android:layout_marginStart="10dp"
             android:layout_marginTop="27dp"
+            android:layout_marginEnd="10dp"
             android:background="@drawable/rect_listview_frame"
-            android:paddingBottom="10dp"
-            android:paddingEnd="10dp"
             android:paddingStart="10dp"
             android:paddingTop="10dp"
+            android:paddingEnd="10dp"
+            android:paddingBottom="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -53,14 +53,14 @@
             android:id="@+id/myOwnEventDetailsButtonShowQR"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="10dp"
             android:background="@color/zentea_darkgreen"
             android:drawableEnd="@drawable/ic_qr1"
-            android:paddingEnd="5dp"
             android:paddingStart="30dp"
+            android:paddingEnd="5dp"
             android:text="@string/savingSuccessful_qrcode"
             android:textColor="@android:color/background_light"
             android:textSize="14sp"
@@ -70,38 +70,60 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/scrollView2"
             app:layout_constraintVertical_chainStyle="packed" />
-            />
+
 
         <Button
             android:id="@+id/myOwnEventDetailsButtonShowAcceptances"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
 
             android:background="@color/zentea_darkgreen"
             android:drawableEnd="@drawable/ic_answers"
-            android:paddingEnd="5dp"
             android:paddingStart="30dp"
+            android:paddingEnd="5dp"
             android:text="@string/show_Response"
+            android:textColor="@android:color/background_light"
+            android:textSize="14sp"
+            app:layout_constraintBottom_toTopOf="@+id/myOwnEventDetailsButtonSendInvite"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/myOwnEventDetailsButtonShowQR" />
+
+        <Button
+            android:id="@+id/myOwnEventDetailsButtonSendInvite"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+
+            android:background="@color/zentea_darkgreen"
+            android:drawableEnd="@drawable/ic_person"
+            android:paddingStart="30dp"
+            android:paddingEnd="5dp"
+            android:text="@string/teilnehmer_einladen"
             android:textColor="@android:color/background_light"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/myOwnEventDetailsButtonShowQR" />
+            app:layout_constraintTop_toBottomOf="@+id/myOwnEventDetailsButtonShowAcceptances" />
 
         <TextView
             android:id="@+id/myOwnEventyourAppointmentText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="20dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="10dp"
             android:paddingStart="8dp"
+            android:paddingEnd="8dp"
             android:text=""
             android:textSize="18sp"
             android:textStyle="bold"
