--- a/app/src/main/res/layout/fragment_new_event.xml
+++ b/app/src/main/res/layout/fragment_new_event.xml
@@ -112,7 +112,7 @@
                 android:layout_alignBaseline="@+id/newEvent_textEdit_endTime"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
                 android:layout_marginTop="189dp"
                 android:text="@string/event_endtime"
                 android:textSize="16sp" />
@@ -146,7 +146,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignBaseline="@id/newEvent_checkBox_SerialEvent"
                 android:layout_alignParentEnd="true"
-                android:entries="@string/event_repetition"
+                android:entries="@array/event_repetitions"
                 android:visibility="gone" />
 
 
@@ -156,7 +156,7 @@
                 android:layout_height="32dp"
                 android:layout_alignParentStart="true"
                 android:layout_below="@id/newEvent_checkBox_SerialEvent"
-                android:paddingLeft="10dp"
+                android:paddingStart="10dp"
                 android:text="@string/event_endOfRepetition"
                 android:textSize="16sp"
                 android:visibility="gone" />
@@ -181,7 +181,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignBaseline="@+id/newEvent_textEdit_room"
                 android:layout_alignParentStart="true"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
                 android:text="@string/event_room"
                 android:textSize="16sp" />
 
@@ -213,7 +213,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignBaseline="@+id/newEvent_textEdit_shortTitle"
                 android:layout_alignParentStart="true"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
                 android:text="@string/event_shortTitle"
                 android:textSize="16sp" />
 
@@ -223,7 +223,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignBaseline="@+id/unewEvent_textEdit_userName"
                 android:layout_alignParentStart="true"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
                 android:text="@string/username_text"
                 android:textSize="16sp" />
 
